--- a/RandomNumTools-Windows/RandomNumTools-Windows.vcxproj
+++ b/RandomNumTools-Windows/RandomNumTools-Windows.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="AGButton.h" />
     <ClInclude Include="AGComboBox.h" />
     <ClInclude Include="AGEdit.h" />
+    <ClInclude Include="AGListCtrl.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="DlgConfig.h" />
     <ClInclude Include="DlgImportEdit.h" />
@@ -124,6 +125,7 @@
     <ClCompile Include="AGButton.cpp" />
     <ClCompile Include="AGComboBox.cpp" />
     <ClCompile Include="AGEdit.cpp" />
+    <ClCompile Include="AGListCtrl.cpp" />
     <ClCompile Include="DlgConfig.cpp" />
     <ClCompile Include="DlgImportEdit.cpp" />
     <ClCompile Include="DlgImportNew.cpp" />
